fixed header bg

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1900,6 +1900,11 @@ header.zubuz-header-section.sticky-menu {
   background-color: var(--white-bg);
 }
 
+.site-header.site-header--menu-center.zubuz-header-section {
+  box-shadow: 0 4px 80px rgba(0, 0, 0, 0.1);
+  background-color: var(--white-bg);
+}
+
 header.zubuz-header-section.white-menu.sticky-menu {
   background-color: var(--dark-bg);
 }
