--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2601,6 +2601,24 @@ a.comment-reply {
 .comment-box h3 {
   margin-bottom: 30px;
 }
+.lead-magnet-highlight {
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+.lead-magnet-highlight .lead-magnet-link {
+  display: block;
+  width: 100%;
+  max-width: 576px;
+  margin: 0 auto;
+}
+.lead-magnet-highlight .lead-magnet-link img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .comment-box-form {
   padding: 40px;
   border-radius: 10px;
